argocd/apps/infra/backrest/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backrest
  name: backrest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backrest
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: backrest
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - marcus-server
      containers:
        - image: garethgeorge/backrest:latest@sha256:efcc68d841078a4ec26e2da2be8a0b676dcdb4884349f27c3e21156c3fee58f1
          imagePullPolicy: IfNotPresent
          name: backrest
          ports:
            - containerPort: 9898
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: data
            - name: config
              mountPath: /config
            - name: cache
              mountPath: /cache
            - name: zpool
              mountPath: /userdata/zpool/
            - name: hostdata
              mountPath: /userdata/data
            - name: etc
              mountPath: /userdata/etc
            - name: mnt
              mountPath: /userdata/mnt
          readinessProbe:
            httpGet:
              path: /
              port: 9898
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 9898
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
      restartPolicy: Always
      volumes:
        - name: data
          hostPath:
            path: /zpool/k8s/backrest/data
        - name: config
          hostPath:
            path: /zpool/k8s/backrest/config
        - name: cache
          hostPath:
            path: /zpool/k8s/backrest/cache
        - name: zpool
          hostPath:
            path: /zpool/
        - name: hostdata
          hostPath:
            path: /data
        - name: etc
          hostPath:
            path: /etc
        - name: mnt
          hostPath:
            path: /mnt
