argocd/apps/infra/backrest/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backrest-vs
spec:
  hosts:
  - backrest.yanello.net
  gateways:
  - istio-system/kube-gateway
  http:
  - route:
    - destination:
        host: backrest
        port:
          number: 9898
